# AgnesTheSecond

./: .env.example  .gitignore  Claude.md  DECISION_LAYER.md  Dockerfile  PITCH.md  PITCH.pptx  Procfile  README.md  docker-compose.yml  nixpacks.toml  plan.md  pyproject.toml  requirements.txt
chirag/: Claude.md  Do_not_do.md  README.md  pyproject.toml
chirag/data/reference/: hts_crosswalk.csv
chirag/docker/: backend.Dockerfile
chirag/frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
chirag/frontend/.next/: trace
chirag/notebooks/: 01_data_understanding.ipynb
chirag/prompts/: chat_agent.md  evidence_extraction.md  recommendation_polish.md  scope_guard_agent.md  voice_answer_agent.md  voice_backtranslator_agent.md  voice_humanizer_agent.md  voice_translator_agent.md
chirag/scripts/: check_no_taim_imports.sh  cognee_cloud_ingest.py  fetch_usitc_prices.py  phase1_overlap.py  phase1_schema.py  phase2_upgrade_taxonomy.py  phase4_candidates.py  phase4_migrate_subtype.py  phase5_evidence.py  phase6_5_risks.py  phase6_assess.py  phase7_recommend.py  run_all_phases.sh  seed_procurement_mock.py  smoke_db.py  smoke_openai.py
chirag/tests/: conftest.py  test_api_artifacts.py  test_api_procurement.py  test_api_runs.py  test_api_supply_network.py  test_assessment_models.py  test_candidate_generator.py  test_chat_router.py  test_chat_tools.py  test_cognee_cloud_client.py  test_cost_service.py  test_db_loader_procurement.py  test_enricher.py  test_enricher_selector.py  test_evidence_models.py  test_features.py  test_llm_fallback.py  test_llm_polish.py  test_openai_grounded.py  test_overlap.py  test_procurement_models.py  test_queries.py  test_reasoning_context.py  test_reasoning_rules.py  test_recommendation_builder.py  test_recommendation_engine.py  test_recommendation_models.py  test_recommendation_scorer.py  test_risks_service.py  test_scoring.py  test_smoke.py  test_taxonomy_keywords.py  test_usitc_dataweb.py
docker/: frontend.Dockerfile
(+418 files in other folders)
