[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agnes"
version = "0.1.0"
description = "Evidence-grounded raw material substitution and sourcing consolidation (hackathon MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pandas>=2",
    "python-dotenv>=1",
    "openai>=1.50",
    "httpx>=0.27",
    "aiohttp>=3.12",
    "structlog>=24",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "jupyter>=1",
    "ipykernel>=6",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
